@@ -5,6 +5,9 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Add mp_product_sku() template function
+- Fix css class on product images
+
 2.8.1 - 1/21/2012 - Aaron
 ----------------------------------------------------------------------
 - Add very beta Fedex shipping module
